Fixed stacking notifications, causing a scrollbar

--- a/html/sass/partials/topnav.sass
+++ b/html/sass/partials/topnav.sass
@@ -105,6 +105,8 @@
 #mail-notifications,
 #notifications
   max-height: 350px
+  position: absolute
+  left: -9999px
 
   .mail-Messages,
   .notifications-Messages
